syntax = "proto3";

import "google/protobuf/empty.proto";

package stateful;

service Stateful {
  rpc Lock (LockRequest) returns (google.protobuf.Empty) {}
  rpc Unlock (UnlockRequest) returns (google.protobuf.Empty) {}
  rpc SetData (SetDataRequest) returns (google.protobuf.Empty) {}
  rpc GetData (GetDataRequest) returns (GetDataResponse) {}
}

message LockRequest {
  uint64 device = 1;
}

message UnlockRequest {
  uint64 device = 1;
}

message SetDataRequest {
  uint64 device = 1;
  bytes data = 2;
}

message GetDataRequest {
  uint64 device = 1;
}

message GetDataResponse {
  bytes data = 1;
}